This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Aug-2002 (Lars Duening)  (3.3.221)
    - (array, interpret.c, prolang.y) Added the symmetric difference
         operators '^' and '^=' for arrays; complemented '|' for arrays
         with '|='.
    - (array.c) Modified the sorting routine get_array_order() so that
         for small arrays linear-exchange is used instead of heapsort.
         This trades less overhead for worse complexity.

13-Aug-2002 (Lars Duening)  (3.3.220)
    - (configure) The VERBOSE_OPCPROF define in config.h got clobbered.
    - (interpret.c) I removed the copy-on-write for mappings again - 
         it broke more than it fixed.

13-Aug-2002 (Lars Duening)  (3.3.219)
    - (regexp, mregex) Changed the original RE package to return
         error codes instead of calling regerror(). This puts it more
         in line with the PCRE implementation.
    - (configure, setting files) PCRE is now compilation default; however
         I disabled it explicitedly in the setting files.
    - (regexp, pcre) Whenever the RE engine has to backtrack, the eval
         cost is incremented and checked. This will catch pathological
         matches like regexp(({"=XX==================="}), "X(.+)+X")
         (regexp mod provided by Fiona).
  This completes the addition of PCRE to LDMud (f-010406-0).

12-Aug-2002 (Lars Duening)  (3.3.218)
    - (lex.c) New predefined macros __CATCH_EVAL_COST__ and
         __MASTER_EVAL_COST__ to carry the corresponding
         configuration options over to LPC (suggested by Menaures).
    - (Makefiles, configure, config.h) Moved the debugging options into
         config.h to ensure clean recompilations, and made them
         configurable through the normal configure mechanism.
    - (make_func.y, lotsa files) Efuns with more than four fixed
         arguments are implemented as vararg efuns. In addition,