@@ -20,14 +20,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 221)
-(Parent-Version lpmud 3-3 220)
-(Version-Log "Implemented the symmetric difference on arrays.
-Added the '|=' operator - I must have forgotten it before.
-Sorting an array now uses a simpler sort for small arrays.")
+(Project-Version lpmud 3-3 222)
+(Parent-Version lpmud 3-3 221)
+(Version-Log "Corrected build problems.
+One error message printed memory garbage.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 14 Aug 2002 00:21:40 -0600")
+(Checkin-Time "Wed, 14 Aug 2002 13:46:37 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -62,7 +61,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.7 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.42 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.284 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.285 644))
   (HISTORY (lpmud/f/49_HISTORY 1.263 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.15 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -71,7 +70,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/configure (lpmud/d/0_configure 1.19.1.46 755))
   (src/config.h.in (lpmud/d/1_config.h 1.41.1.4.1.8.1.6 644))
   (src/machine.h.in (lpmud/b/9_machine.h. 1.9.1.3 644))
-  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.9 644))
+  (src/Makefile.in (lpmud/d/17_Makefile.i 1.37.1.39.1.10 644))
   (src/mkinstalldirs (lpmud/c/4_mkinstalld 1.1 644))
   (src/install-sh (lpmud/c/5_install-sh 1.2 755))
 
@@ -115,8 +114,8 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/alloca.c (lpmud/d/13_alloca.c 1.10 644))
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.5 644))
   (src/actions.c (lpmud/d/12_actions.c 1.15.1.34 644))
-  (src/array.h (lpmud/f/47_array.h 1.18.1.18 644))
-  (src/array.c (lpmud/d/12_array.c 1.46.1.39 644))
+  (src/array.h (lpmud/f/47_array.h 1.18.1.19 644))
+  (src/array.c (lpmud/d/12_array.c 1.46.1.40 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.6 644))
   (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.11 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
@@ -125,7 +124,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.20 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.6 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.35 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.12 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.13 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.19 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.17 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -145,7 +144,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.6 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.24 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.29 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.30 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.10 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.12 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.11 644))
@@ -163,7 +162,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.16 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.70 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.71 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.4 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -225,7 +224,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.12 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.27 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.78 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.79 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.9 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.48 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.3 644))
@@ -234,7 +233,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.15 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
-  (src/swap.c (lpmud/25_swap.c 1.36.1.26 644))
+  (src/swap.c (lpmud/25_swap.c 1.36.1.27 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
   (src/sysmalloc.c (lpmud/23_sysmalloc. 1.1 644))
   (src/telnet.h (lpmud/22_telnet.h 1.5.1.2 644))
@@ -272,7 +271,7 @@ Sorting an array now uses a simpler sort for small arrays.")
   (src/hosts/be/config.h (lpmud/e/34_config.h 1.32.1.18 644))
   (src/hosts/be/be.h (lpmud/e/35_be.h 1.7 644))
   (src/hosts/be/beyacc (lpmud/i/39_beyacc 1.1 744))
-  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.64 644))
+  (src/hosts/be/Makefile (lpmud/e/37_Makefile 1.60.1.65 644))
   (src/hosts/be/icon-32x32.raw (lpmud/s/37_icon-32x32 1.1 644) :no-keywords)
   (src/hosts/be/icon-16x16.raw (lpmud/s/38_icon-16x16 1.1 644) :no-keywords)
   (src/hosts/be/driver.rsrc (lpmud/s/39_driver.rsr 1.1 644) :no-keywords)
@@ -285,7 +284,7 @@ Sorting an array now uses a simpler sort for small arrays.")
 
   ;; Host: OS/2
   (src/hosts/os2/machine.h (lpmud/m/36_machine.h 1.1 644))
-  (src/hosts/os2/Makefile (lpmud/m/37_Makefile 1.19 644))
+  (src/hosts/os2/Makefile (lpmud/m/37_Makefile 1.20 644))
 
   ;; Host: Win32
   (src/hosts/win32/tubmud.bmp (lpmud/g/20_tubmud.bmp 1.1 644) :no-keywords)
