@@ -149,16 +149,16 @@ endif
 # $Format: "ifeq ($ReleaseType$, pre)"$
 ifeq (dev, pre)
 # $Format: "  SETVERFLAGS += d $ProjectMinorVersion$"$
-  SETVERFLAGS += d 221
+  SETVERFLAGS += d 222
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ReleaseMicro$-pre.$ProjectMinorVersion$"$
-  VSTRING = 3.3.0-pre.221
+  VSTRING = 3.3.0-pre.222
 endif
 # $Format: "ifeq ($ReleaseType$, dev)"$
 ifeq (dev, dev)
 # $Format: "  SETVERFLAGS += d $ProjectMinorVersion$"$
-  SETVERFLAGS += d 221
+  SETVERFLAGS += d 222
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ReleaseMicro$-dev.$ProjectMinorVersion$"$
-  VSTRING = 3.3.0-dev.221
+  VSTRING = 3.3.0-dev.222
 endif
 
 else
@@ -166,12 +166,12 @@ else
 # --- Development Versions ---
 
 # $Format: "SETVERFLAGS = -app $ReleaseMajor$ $ReleaseMinor$ $ProjectMinorVersion$"$
-SETVERFLAGS = -app 3 3 221
+SETVERFLAGS = -app 3 3 222
 
 # $Format: "  SETVERFLAGS += f"$
   SETVERFLAGS += f
 # $Format: "  VSTRING = $ReleaseMajor$.$ReleaseMinor$.$ProjectMinorVersion$"$
-  VSTRING = 3.3.221
+  VSTRING = 3.3.222
 
 endif
 
@@ -545,11 +545,12 @@ $(OBJ)/heartbeat.o : ../mudlib/sys/debug_info.h xalloc.h wiz_list.h \
 
 $(OBJ)/interpret.o : ../mudlib/sys/trace.h ../mudlib/sys/debug_info.h \
     ../mudlib/sys/driver_hook.h xalloc.h wiz_list.h switch.h swap.h \
-    svalue.h smalloc.h stdstrings.h simul_efun.h simulate.h object.h \
-    mstrings.h mapping.h lex.h instrs.h heartbeat.h gcollect.h filestat.h \
-    exec.h comm.h closure.h backend.h array.h actions.h interpret.h \
-    my-alloca.h typedefs.h driver.h ptrtable.h strfuns.h sent.h main.h \
-    port.h config.h hosts/unix.h hosts/be/be.h machine.h
+    svalue.h smalloc.h stdstrings.h simul_efun.h simulate.h prolang.h \
+    parse.h otable.h object.h mstrings.h mapping.h lex.h instrs.h \
+    heartbeat.h gcollect.h filestat.h exec.h efuns.h ed.h comm.h closure.h \
+    call_out.h backend.h array.h actions.h interpret.h my-alloca.h \
+    typedefs.h driver.h ptrtable.h strfuns.h sent.h main.h port.h config.h \
+    hosts/unix.h hosts/be/be.h machine.h
 
 $(OBJ)/lex.o : efun_defs.c ../mudlib/sys/driver_hook.h xalloc.h wiz_list.h \
     svalue.h strfuns.h stdstrings.h simul_efun.h simulate.h prolang.h \
@@ -662,11 +663,11 @@ $(OBJ)/simul_efun.o : xalloc.h swap.h svalue.h stdstrings.h simulate.h \
 $(OBJ)/simulate.o : ../mudlib/sys/rtlimits.h ../mudlib/sys/files.h \
     ../mudlib/sys/driver_hook.h ../mudlib/sys/debug_info.h xalloc.h \
     wiz_list.h svalue.h swap.h strfuns.h stdstrings.h smalloc.h \
-    simul_efun.h sent.h prolang.h otable.h object.h mstrings.h mapping.h \
-    main.h lex.h instrs.h interpret.h heartbeat.h gcollect.h filestat.h \
-    comm.h closure.h call_out.h backend.h array.h actions.h simulate.h \
-    my-alloca.h typedefs.h driver.h ptrtable.h exec.h port.h config.h \
-    hosts/unix.h hosts/be/be.h machine.h
+    simul_efun.h sent.h prolang.h otable.h object.h mstrings.h mregex.h \
+    mapping.h main.h lex.h instrs.h interpret.h heartbeat.h gcollect.h \
+    filestat.h ed.h comm.h closure.h call_out.h backend.h array.h actions.h \
+    simulate.h my-alloca.h typedefs.h driver.h ptrtable.h exec.h regexp.h \
+    pcre/pcre.h port.h config.h hosts/unix.h hosts/be/be.h machine.h
 
 $(OBJ)/sprintf.o : xalloc.h swap.h svalue.h stdstrings.h simul_efun.h \
     simulate.h sent.h random.h ptrtable.h object.h mstrings.h mapping.h \
