@@ -194,8 +194,11 @@
 #include "actions.h"
 #include "array.h"
 #include "backend.h"
+#include "call_out.h"
 #include "closure.h"
 #include "comm.h"
+#include "ed.h"
+#include "efuns.h"
 #include "exec.h"
 #include "filestat.h"
 #include "gcollect.h"
@@ -205,6 +208,9 @@
 #include "mapping.h"
 #include "mstrings.h"
 #include "object.h"
+#include "otable.h"
+#include "parse.h"
+#include "prolang.h"
 #include "simulate.h"
 #include "simul_efun.h"
 #include "stdstrings.h"
