@@ -273,7 +273,7 @@ _free_object ( object_t *ob, const char * file, int line)
 #ifdef CHECK_OBJECT_STAT
         if (check_object_stat)
         {
-            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) free(%p '%s') with %d vars : %d -> (%ld:%ld)\n"
+            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) free(%p '%s') with %d vars : %ld -> (%ld:%ld)\n"
                           , tot_alloc_object, tot_alloc_object_size, ob, ob->name ? get_txt(ob->name) : "<null>"
                           , prog->num_variables
                           , prog->num_variables * sizeof (svalue_t) + sizeof (object_t)
@@ -309,7 +309,7 @@ _free_object ( object_t *ob, const char * file, int line)
 #ifdef CHECK_OBJECT_STAT
         if (check_object_stat)
         {
-            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) free(%p '%s') with name : %d -> (%ld:%ld)\n"
+            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) free(%p '%s') with name : %ld -> (%ld:%ld)\n"
                           , tot_alloc_object, tot_alloc_object_size, ob, get_txt(ob->name)
                           , mstrsize(ob->name)
                           , tot_alloc_object-1, tot_alloc_object_size - (mstrsize(ob->name)+1)
@@ -398,7 +398,7 @@ static mp_int last_id = 0;
 #ifdef CHECK_OBJECT_STAT
     if (check_object_stat)
     {
-        fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) new(%p) with %d vars : %d -> (%ld:%ld)\n"
+        fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) new(%p) with %d vars : %ld -> (%ld:%ld)\n"
                       , tot_alloc_object, tot_alloc_object_size, ob
                       , num_var, size2+size
                       , tot_alloc_object+1, tot_alloc_object_size + size + size2
@@ -910,7 +910,7 @@ replace_programs (void)
 #ifdef CHECK_OBJECT_STAT
             if (check_object_stat)
             {
-                fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) rprog(%p '%s') sub %d vars : %d -> (%ld:%ld)\n"
+                fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) rprog(%p '%s') sub %d vars : %ld -> (%ld:%ld)\n"
                               , tot_alloc_object, tot_alloc_object_size, r_ob, r_ob->ob->name ? get_txt(r_ob->ob->name) : "<null>"
                               , i
                               , i * sizeof(svalue_t)
@@ -2862,8 +2862,8 @@ v_replace_program (svalue_t *sp, int num_arg)
          */
         debug_message("%s Object '%s', program '%s': Cannot schedule "
                       "replace_program() after binding lambda closures.\n"
-                     , time_stamp(), current_object->name
-                     , current_prog->name
+                     , time_stamp(), get_txt(current_object->name)
+                     , get_txt(current_prog->name)
                      );
         for ( ; num_arg != 0; num_arg--)
         {
