@@ -1323,7 +1323,7 @@ swap_variables (object_t *ob)
 #ifdef CHECK_OBJECT_STAT
     if (check_object_stat)
     {
-        fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) swapout(%p '%s') %d vars : %d -> (%ld:%ld)\n"
+        fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) swapout(%p '%s') %d vars : %ld -> (%ld:%ld)\n"
                       , tot_alloc_object, tot_alloc_object_size, ob, ob->name ? get_txt(ob->name) : "<null>"
                       , num_variables
                       , num_variables * sizeof (svalue_t)
@@ -1738,7 +1738,7 @@ load_ob_from_swap (object_t *ob)
 #ifdef CHECK_OBJECT_STAT
         if (check_object_stat)
         {
-            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) swapin(%p '%s') %d vars : %d -> (%ld:%ld)\n"
+            fprintf(stderr, "DEBUG: OSTAT: (%ld:%ld) swapin(%p '%s') %d vars : %ld -> (%ld:%ld)\n"
                           , tot_alloc_object, tot_alloc_object_size, ob, ob->name ? get_txt(ob->name) : "<null>"
                           , ob->prog->num_variables
                           , ob->prog->num_variables * sizeof (svalue_t)
